sender :: amqp integration added
- pendingEmails queue definition added
- structure provided by SmtpClient interface